# pdf-markdown-embed

./: .gitignore  Dockerfile.pgvector  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/config/: settings.py
src/models/: llm_factory.py
src/processing/: document_processor.py  image_processor.py
src/storage/: minio_client.py  tree_store.py  vector_store.py  vectorless.py
src/utils/: logger.py
